1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* main.m (main): Constify argv.

1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMHOME): Don't define if already defined.
