@@ -1,3 +1,7 @@
+1998-02-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Bug.h: Include from objectbase/ instead of swarmobject/.
+
 1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* main.m (main): Constify argv.
